Fix dropdown z-index when multiple charts are close to eachother

--- a/Firebase-project/src/app/compare/report/report.component.scss
+++ b/Firebase-project/src/app/compare/report/report.component.scss
@@ -8,12 +8,6 @@
   width: inherit;
 }
 
-app-date-time-range-picker {
-  position: absolute;
-  top: 8px;
-  right: 23px;
-  z-index: 1;
-}
 
 #spinner {
   height: 331px;
